[project]
name = "adk-enterprise-data-lab"
version = "0.1.0"
description = "Agentic Data Cloud Lab using Google ADK and MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.1.0",              
    "google-cloud-aiplatform>=1.153.1",
    "google-cloud-bigquery>=3.41.0",
    "google-genai>=1.75.0",            
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "db-dtypes==1.4.4",
    "pydantic>=2.12.0",              
    "mcp",
    "fastapi",
    "uvicorn",
    "pandas-gbq"
]